--- a/src/gui/mainwindow.ui
+++ b/src/gui/mainwindow.ui
@@ -106,14 +106,14 @@
            </widget>
           </item>
           <item row="2" column="1">
-           <widget class="QLineEdit" name="tab0_res1path_lineEdit">
+           <widget class="QLineEdit" name="lineEditT0_res1">
             <property name="enabled">
              <bool>true</bool>
             </property>
            </widget>
           </item>
           <item row="3" column="1">
-           <widget class="QLineEdit" name="tab0_res2path_lineEdit">
+           <widget class="QLineEdit" name="lineEditT0_res2">
             <property name="enabled">
              <bool>true</bool>
             </property>
