--- a/src/gui/mainwindow.ui
+++ b/src/gui/mainwindow.ui
@@ -18,7 +18,7 @@
     <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>3</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="tabWidgetPage0">
        <attribute name="title">
@@ -69,7 +69,11 @@
         <item>
          <layout class="QGridLayout" name="gridLayout_3">
           <item row="0" column="1">
-           <widget class="QLineEdit" name="lineEditT0_path"/>
+           <widget class="QLineEdit" name="lineEditT0_path">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+           </widget>
           </item>
           <item row="0" column="2">
            <widget class="QPushButton" name="pushButtonT0_path">
@@ -1414,23 +1418,9 @@
              </widget>
             </item>
             <item row="1" column="0">
-             <widget class="QCheckBox" name="checkBoxT3_mask0">
+             <widget class="QCheckBox" name="checkBoxT3_mask">
               <property name="text">
                <string>Mask:</string>
-              </property>
-             </widget>
-            </item>
-            <item row="2" column="0">
-             <widget class="QCheckBox" name="checkBoxT3_mask1">
-              <property name="text">
-               <string>...</string>
-              </property>
-             </widget>
-            </item>
-            <item row="3" column="0">
-             <widget class="QCheckBox" name="checkBoxT3_mask2">
-              <property name="text">
-               <string>...</string>
               </property>
              </widget>
             </item>
@@ -1445,6 +1435,20 @@
              <widget class="QCheckBox" name="checkBoxT3_col">
               <property name="text">
                <string>Columns:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="0">
+             <widget class="QLabel" name="label_17">
+              <property name="text">
+               <string>...</string>
+              </property>
+             </widget>
+            </item>
+            <item row="3" column="0">
+             <widget class="QLabel" name="label_28">
+              <property name="text">
+               <string>...</string>
               </property>
              </widget>
             </item>
@@ -2828,6 +2832,14 @@
     </property>
     <addaction name="actionOnline_documentation"/>
    </widget>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>File</string>
+    </property>
+    <addaction name="actionSave"/>
+    <addaction name="actionSave_as"/>
+   </widget>
+   <addaction name="menuFile"/>
    <addaction name="menuHelp"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
@@ -2842,6 +2854,25 @@
   <action name="actionOnline_documentation">
    <property name="text">
     <string>Online documentation</string>
+   </property>
+  </action>
+  <action name="actionSave">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>Save</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
+   </property>
+  </action>
+  <action name="actionSave_as">
+   <property name="text">
+    <string>Save as...</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Shift+S</string>
    </property>
   </action>
  </widget>
@@ -2929,7 +2960,7 @@
  <buttongroups>
   <buttongroup name="buttonGroupT1_set0"/>
   <buttongroup name="buttonGroupT1_set1"/>
-  <buttongroup name="buttonGroupT1_stat"/>
   <buttongroup name="buttonGroupT3_mouse"/>
+  <buttongroup name="buttonGroupT1_stat"/>
  </buttongroups>
 </ui>
