--- a/src/gui/mainwindow.ui
+++ b/src/gui/mainwindow.ui
@@ -18,7 +18,7 @@
     <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>3</number>
+       <number>4</number>
       </property>
       <widget class="QWidget" name="tabWidgetPage0">
        <attribute name="title">
@@ -1924,6 +1924,20 @@
             </property>
            </spacer>
           </item>
+          <item>
+           <widget class="QLabel" name="label_31">
+            <property name="text">
+             <string>Spatial average: </string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QDoubleSpinBox" name="doubleSpinBox_mean">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+           </widget>
+          </item>
          </layout>
         </item>
         <item>
@@ -1932,6 +1946,9 @@
            <widget class="QPushButton" name="pushButtonT4_compute">
             <property name="enabled">
              <bool>true</bool>
+            </property>
+            <property name="toolTip">
+             <string>Compute statistics (might take a long time!). Before the computation start the JSON is stored. It is updated with the result once the computation is complete.</string>
             </property>
             <property name="text">
              <string>Compute</string>
@@ -1951,7 +1968,10 @@
           <item>
            <widget class="QPushButton" name="pushButtonT4_save">
             <property name="enabled">
-             <bool>false</bool>
+             <bool>true</bool>
+            </property>
+            <property name="toolTip">
+             <string>Save the output images (below).</string>
             </property>
             <property name="text">
              <string>Save</string>
@@ -2788,6 +2808,9 @@
             <property name="decimals">
              <number>3</number>
             </property>
+            <property name="minimum">
+             <double>-1.000000000000000</double>
+            </property>
             <property name="maximum">
              <double>1.000000000000000</double>
             </property>
@@ -2800,6 +2823,9 @@
             </property>
             <property name="decimals">
              <number>3</number>
+            </property>
+            <property name="minimum">
+             <double>-1.000000000000000</double>
             </property>
             <property name="maximum">
              <double>1.000000000000000</double>
@@ -2854,24 +2880,19 @@
    <property name="text">
     <string>Online documentation</string>
    </property>
+   <property name="shortcut">
+    <string>F7</string>
+   </property>
   </action>
   <action name="actionSave">
    <property name="enabled">
-    <bool>false</bool>
+    <bool>true</bool>
    </property>
    <property name="text">
     <string>Save</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+S</string>
-   </property>
-  </action>
-  <action name="actionSave_as">
-   <property name="text">
-    <string>Save as...</string>
-   </property>
-   <property name="shortcut">
-    <string>Ctrl+Shift+S</string>
    </property>
   </action>
  </widget>
@@ -2957,9 +2978,9 @@
  <resources/>
  <connections/>
  <buttongroups>
-  <buttongroup name="buttonGroupT3_mouse"/>
   <buttongroup name="buttonGroupT1_set0"/>
   <buttongroup name="buttonGroupT1_set1"/>
   <buttongroup name="buttonGroupT1_stat"/>
+  <buttongroup name="buttonGroupT3_mouse"/>
  </buttongroups>
 </ui>
